Fin responsive + onglet "news"

--- a/style.scss
+++ b/style.scss
@@ -35,6 +35,7 @@ html, body, #bloc_page {
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0px;
+    min-height:100%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -44,9 +45,10 @@ html, body, #bloc_page {
       margin: auto;
     }
 
-    @media only screen and (max-width: 550px) {
-    width: auto;
+    @media only screen and (max-width: 320px) {
+    width: 320px;
     margin: auto;
+
     }
 }
 
@@ -61,7 +63,7 @@ html, body, #bloc_page {
   cursor: pointer;
   font-size: 2rem;
   font-family: $Police;
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     font-size: 1rem;
     }
   
@@ -89,6 +91,7 @@ html, body, #bloc_page {
   width: auto;
   border-radius: 2em;
   background-color: $Sitecolor2;
+  font-family: $Police;
   cursor: pointer;
   color: white;
   margin: 0 20px 0 20px;
@@ -128,7 +131,7 @@ a:link, a:visited, a:hover, a:active {
 
 /* ----------------------------------- Bandeau ---------------------------------------------- */
 #bandeau {
-    z-index: 3;
+    z-index: 1;
     background-color: white;
     height: 50px;
     padding-top: 25px;
@@ -139,11 +142,14 @@ a:link, a:visited, a:hover, a:active {
     position: absolute;
     margin-left: 70px;
     z-index: 4;
+    @media only screen and (max-width: 850px) {
+      margin-left: 5px;
+    }
     @media only screen and (max-width: 800px) {
       margin-left: 15px;
     }
-    @media only screen and (max-width: 850px) {
-      margin-left: 5px;
+    @media only screen and (max-width: 390px) {
+      display: none;
     }
 }
 
@@ -156,8 +162,8 @@ a:link, a:visited, a:hover, a:active {
   height: 35px;
   width: 35px;
   position: absolute;
-  right: 25px;
-  top: 30px;
+  right: 20px;
+  top: 20px;
   cursor: pointer;
   background-image: url(Ressources/menu1.png);
   &:hover {
@@ -166,9 +172,6 @@ a:link, a:visited, a:hover, a:active {
   @media only screen and (min-width: 768px) {
     display:none;
     }
-  @media only screen and (max-width: 320px) {
-    right: 0px;
-    }  
 }
 
 #navigation ul {
@@ -246,18 +249,54 @@ a:link, a:visited, a:hover, a:active {
 }
 
 /* ------------------------- Accueil ------------------------------------- */
-#MenuAccueil {
+#ACCUEIL {
+  margin-top: 50px; 
+}
 
-margin-top: 130px;
+#ACCUEIL h2 {
+font-family: $Police;
+font-size: 30px;
+margin-bottom: 30px;
+@media only screen and (max-width: 768px) {
+  margin-top: 130px;
+  }
+  @media only screen and (max-width: 440px) {
+    font-size: 20px;
+    }
+}
+
+#logoNews {
+  width: 200px;
+  margin: auto;
+  margin-top: 20px;
+  @media only screen and (max-width: 500px) {
+    display: none;
+    }
+}
+
+#AccueilPart1 img {
+  width: 490px;
+  height: 325px;
+  border: 3px solid #F2F2F2;
+  @media only screen and (max-width: 500px) {
+    width: 300px;
+    height: 200px;
+  }
+}
+
+#MenuAccueil {
+margin-top: 15px;
 display: flex;
+flex-wrap: wrap;
 justify-content: space-around;
+align-items: center;
 
 @media only screen and (max-width: 610px) {
 flex-direction: column;
 justify-content: center;
 align-items: center;
 margin: auto;
-margin-top: 100px;
+margin-top: 30px;
 }
 
 }
@@ -265,16 +304,14 @@ margin-top: 100px;
 #AccueilPart2 {
   display: flex;
   flex-direction: column;
-
-  @media only screen and (max-width: 610px) {
-    margin-top: 50px;
-    }
 }
 
 #meteo {
-  background-color: rgba(255, 255, 255, 0.733);
+  background-color: rgb(255, 255, 255);
+  border: 3px solid #F2F2F2;
   height:200px;
   width:300px;
+  margin: 5px 0 20px 0;
 }
 
 #logoMeteo {
@@ -288,14 +325,41 @@ margin-top: 100px;
   align-items: center;
 }
 
-#calendrier {
-  background-color: rgba(255, 255, 255, 0.733);
-  height:200px;
-  width:300px;
+#menuNews {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 100px;
   @media only screen and (max-width: 610px) {
-
-    margin-top: 25px;
+    flex-direction: column;
+  }
+  @media only screen and (max-width: 500px) {
+    margin-top: -25px;
     }
+}
+
+.ongletNews {
+  width: 300px;
+  height: 200px;
+  padding: 5px;
+  margin: 30px;
+  border: 3px solid #F2F2F2;
+  cursor: pointer;
+  @media only screen and (max-width: 450px) {
+    margin: 20px auto 20px auto;
+  }
+}
+
+.imageOnglet {
+  position: absolute;
+}
+
+.titreOnglet {
+  position: relative;
+  height: auto;
+  background-color: rgba(255, 255, 255, 0.486);
+  top: 190px;
 }
 
 /* -------------------------------- Le Village ---------------------------- */
@@ -308,8 +372,13 @@ margin-top: 100px;
   margin: auto;
   margin-bottom: 300px;
   @media only screen and (max-width: 800px) {
-    width: auto;
+    width: 500px;
   }
+  @media only screen and (max-width: 500px) {
+    margin-bottom:0px;
+    width: 300px;
+  }
+  
 }
 
 #village1 p {
@@ -321,32 +390,40 @@ margin-top: 100px;
 }
 
 #village2 {
-  @media only screen and (max-width: 1075px) {
-    display: flex;
+  display: flex;
+  justify-content: space-around;
+  @media only screen and (max-width: 800px) {
+
     flex-direction: column;
+    align-items: center;
     margin-bottom: -50px;
   }
 }
 
 #village3 {
   margin-bottom: 50px;
-  @media only screen and (max-width: 1075px) {
+  @media only screen and (max-width: 1005px) {
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
 }
 
 #village4 {
   margin-bottom: 0px; 
-  @media only screen and (max-width: 1075px) {
+  @media only screen and (max-width: 800px) {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 }
 
 .legende {
   font-weight: bold;
-  margin: auto;
+  width: 500px;
+  @media only screen and (max-width: 500px) {
+    width: 300px;
+  }
+
 }
 
 .menuVillage {
@@ -359,7 +436,7 @@ margin-top: 100px;
   border: 4px solid #F2F2F2;
 }
 
-#Ancre1, #Ancre2, #Ancre3, #toSezanne {
+#Ancre1, #toSezanne {
   margin-top: 20px;
   transform: scale(1);
   transition-duration: 300ms;
@@ -373,6 +450,9 @@ margin-top: 100px;
   width: 500px;
   border: 3px solid #F2F2F2;
   overflow: hidden;
+  @media only screen and (max-width: 500px) {
+    display: none;
+  }
 }
 
 .imgCarrouselVillage {
@@ -391,19 +471,29 @@ margin-top: 100px;
   float: left;
 }
 
+#photoNavMobile img {
+  height: 200px;
+  width: 300px;
+  border: 3px solid #F2F2F2;
+  display: none;
+  @media only screen and (max-width: 500px) {
+  display: block;
+  }
+}
+
 .menu2Village img {
   width:500px;
   height: 350px;
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 500px) {
     width: 300px;
     height: 200px;
   }
 }
 
 #Maps iframe {
-  width: 600px;
-  height: 450px;
-  @media only screen and (max-width: 768px) {
+  width:500px;
+  height: 350px;
+  @media only screen and (max-width: 500px) {
     width: 300px;
     height: 200px;
   }
@@ -412,6 +502,7 @@ margin-top: 100px;
 /* --------------------------------- MAIRIE ------------------------------ */
 #MAIRIE {
   z-index: 0;
+  margin-top: -40px;
   display: block;
   width: 100%;
   overflow:hidden;
@@ -419,18 +510,25 @@ margin-top: 100px;
   position: absolute;
   top: -100px;
   background-color: rgb(255, 255, 255);
+  @media only screen and (max-width: 768px) {
+    margin-top: -50px
+  }
 }
 
 /* ----------------------------------- Demarches ---------------------------- */
 #DEMARCHES {
-  z-index: 1;
+  z-index: 0;
   opacity: 1;
-  position: relative;
-  top: -300px;
+  position: absolute;
+  width: 100%;
+  top: -280px;
   background-color: rgb(255, 255, 255);
   margin-top: 0px;
   margin-bottom: -150px;
   padding: 10px;
+  @media only screen and (max-width: 768px) {
+    margin-top: 30px
+  }
 }
 
 #etatcivil, #servicePublic {
@@ -491,7 +589,10 @@ margin-top: 100px;
 
 /* ------------------------------------ Contact ----------------------------*/
 #CONTACT {
-  margin-top: 150px;
+  margin-top: 125px;
+  @media only screen and (max-width: 550px) {
+    margin-top: 100px;;
+  }
 }
 
 #formulaireContact {
@@ -500,14 +601,18 @@ margin-top: 100px;
     margin: auto;
     font-family: $Police;
     font-size: 30px;
-    @media only screen and (max-width: 600px) {
-      width: auto;
-      }
+    padding: 15px;
+    @media only screen and (max-width: 550px) {
+      width: 280px;
+    }
   }
 
 #CONTACT input, #CONTACT textarea {
   font-family: $Police;
   font-size: 25px;
+  @media only screen and (max-width: 550px) {
+    width: 270px;
+  }
 }
 
 #CoordonneesContact {
@@ -523,17 +628,16 @@ margin-top: 100px;
     width: 180px;
     height: 30px;
     border: 0px;
-    margin: 20px 0 20px 0;
+    margin: 0 0 10px 0;
   }
 
 #messageContact textarea {
     width: 495px;
     height: 150px;
     border: 0px;
-    margin-top: 20px;
     @media only screen and (max-width: 550px) {
-      width: auto;
-      margin: auto;
+      width: 270px;
+      margin-top: 10px;
     }
   }
 
@@ -542,9 +646,14 @@ margin-top: 100px;
   }
     
   /* --------------------------------- footer ------------------------- */
+  #footer {
+    position: relative;
+    bottom: 0;
+    padding: 5px 0 10px 0;
+    background-color: rgb(255, 255, 255)
+
+  }
+  
   #footer h3, #footer p {
     text-align: center;
-    @media screen and (max-width: 1000px) {
-      display: none;
-    }
   }
