--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ html, body, #bloc_page {
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0px;
+  min-height: 100%;
   text-align: center;
   display: flex;
   flex-direction: column; }
@@ -35,9 +36,9 @@ html, body, #bloc_page {
     #bloc_page {
       width: 1400px;
       margin: auto; } }
-  @media only screen and (max-width: 550px) {
+  @media only screen and (max-width: 320px) {
     #bloc_page {
-      width: auto;
+      width: 320px;
       margin: auto; } }
 
 .btnPerso {
@@ -51,7 +52,7 @@ html, body, #bloc_page {
   cursor: pointer;
   font-size: 2rem;
   font-family: "Acme-Regular"; }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 800px) {
     .btnPerso {
       font-size: 1rem; } }
 
@@ -76,6 +77,7 @@ html, body, #bloc_page {
   width: auto;
   border-radius: 2em;
   background-color: #1e7a21;
+  font-family: "Acme-Regular";
   cursor: pointer;
   color: white;
   margin: 0 20px 0 20px;
@@ -109,7 +111,7 @@ a:link, a:visited, a:hover, a:active {
 
 /* ----------------------------------- Bandeau ---------------------------------------------- */
 #bandeau {
-  z-index: 3;
+  z-index: 1;
   background-color: white;
   height: 50px;
   padding-top: 25px;
@@ -119,12 +121,15 @@ a:link, a:visited, a:hover, a:active {
   position: absolute;
   margin-left: 70px;
   z-index: 4; }
-  @media only screen and (max-width: 800px) {
-    #logo {
-      margin-left: 15px; } }
   @media only screen and (max-width: 850px) {
     #logo {
       margin-left: 5px; } }
+  @media only screen and (max-width: 800px) {
+    #logo {
+      margin-left: 15px; } }
+  @media only screen and (max-width: 390px) {
+    #logo {
+      display: none; } }
 
 #logo.hide {
   display: none; }
@@ -134,8 +139,8 @@ a:link, a:visited, a:hover, a:active {
   height: 35px;
   width: 35px;
   position: absolute;
-  right: 25px;
-  top: 30px;
+  right: 20px;
+  top: 20px;
   cursor: pointer;
   background-image: url(Ressources/menu1.png); }
   #logoMenu:hover {
@@ -143,9 +148,6 @@ a:link, a:visited, a:hover, a:active {
   @media only screen and (min-width: 768px) {
     #logoMenu {
       display: none; } }
-  @media only screen and (max-width: 320px) {
-    #logoMenu {
-      right: 0px; } }
 
 #navigation ul {
   list-style: none;
@@ -211,29 +213,61 @@ a:link, a:visited, a:hover, a:active {
   z-index: 3; }
 
 /* ------------------------- Accueil ------------------------------------- */
+#ACCUEIL {
+  margin-top: 50px; }
+
+#ACCUEIL h2 {
+  font-family: "Acme-Regular";
+  font-size: 30px;
+  margin-bottom: 30px; }
+  @media only screen and (max-width: 768px) {
+    #ACCUEIL h2 {
+      margin-top: 130px; } }
+  @media only screen and (max-width: 440px) {
+    #ACCUEIL h2 {
+      font-size: 20px; } }
+
+#logoNews {
+  width: 200px;
+  margin: auto;
+  margin-top: 20px; }
+  @media only screen and (max-width: 500px) {
+    #logoNews {
+      display: none; } }
+
+#AccueilPart1 img {
+  width: 490px;
+  height: 325px;
+  border: 3px solid #F2F2F2; }
+  @media only screen and (max-width: 500px) {
+    #AccueilPart1 img {
+      width: 300px;
+      height: 200px; } }
+
 #MenuAccueil {
-  margin-top: 130px;
+  margin-top: 15px;
   display: flex;
-  justify-content: space-around; }
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center; }
   @media only screen and (max-width: 610px) {
     #MenuAccueil {
       flex-direction: column;
       justify-content: center;
       align-items: center;
       margin: auto;
-      margin-top: 100px; } }
+      margin-top: 30px; } }
 
 #AccueilPart2 {
   display: flex;
   flex-direction: column; }
-  @media only screen and (max-width: 610px) {
-    #AccueilPart2 {
-      margin-top: 50px; } }
 
 #meteo {
-  background-color: rgba(255, 255, 255, 0.733);
+  background-color: white;
+  border: 3px solid #F2F2F2;
   height: 200px;
-  width: 300px; }
+  width: 300px;
+  margin: 5px 0 20px 0; }
 
 #logoMeteo {
   height: 100px;
@@ -244,13 +278,38 @@ a:link, a:visited, a:hover, a:active {
   justify-content: space-around;
   align-items: center; }
 
-#calendrier {
-  background-color: rgba(255, 255, 255, 0.733);
-  height: 200px;
-  width: 300px; }
+#menuNews {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 100px; }
   @media only screen and (max-width: 610px) {
-    #calendrier {
-      margin-top: 25px; } }
+    #menuNews {
+      flex-direction: column; } }
+  @media only screen and (max-width: 500px) {
+    #menuNews {
+      margin-top: -25px; } }
+
+.ongletNews {
+  width: 300px;
+  height: 200px;
+  padding: 5px;
+  margin: 30px;
+  border: 3px solid #F2F2F2;
+  cursor: pointer; }
+  @media only screen and (max-width: 450px) {
+    .ongletNews {
+      margin: 20px auto 20px auto; } }
+
+.imageOnglet {
+  position: absolute; }
+
+.titreOnglet {
+  position: relative;
+  height: auto;
+  background-color: rgba(255, 255, 255, 0.486);
+  top: 190px; }
 
 /* -------------------------------- Le Village ---------------------------- */
 #VILLAGE {
@@ -262,7 +321,11 @@ a:link, a:visited, a:hover, a:active {
   margin-bottom: 300px; }
   @media only screen and (max-width: 800px) {
     #village1 {
-      width: auto; } }
+      width: 500px; } }
+  @media only screen and (max-width: 500px) {
+    #village1 {
+      margin-bottom: 0px;
+      width: 300px; } }
 
 #village1 p {
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -271,29 +334,36 @@ a:link, a:visited, a:hover, a:active {
     #village1 p {
       font-size: 18px; } }
 
-@media only screen and (max-width: 1075px) {
-  #village2 {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: -50px; } }
+#village2 {
+  display: flex;
+  justify-content: space-around; }
+  @media only screen and (max-width: 800px) {
+    #village2 {
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: -50px; } }
 
 #village3 {
   margin-bottom: 50px; }
-  @media only screen and (max-width: 1075px) {
+  @media only screen and (max-width: 1005px) {
     #village3 {
       display: flex;
-      flex-direction: column; } }
+      flex-direction: column;
+      justify-content: center; } }
 
 #village4 {
   margin-bottom: 0px; }
-  @media only screen and (max-width: 1075px) {
+  @media only screen and (max-width: 800px) {
     #village4 {
       display: flex;
-      flex-direction: column; } }
+      flex-direction: column-reverse; } }
 
 .legende {
   font-weight: bold;
-  margin: auto; }
+  width: 500px; }
+  @media only screen and (max-width: 500px) {
+    .legende {
+      width: 300px; } }
 
 .menuVillage {
   margin: 50px 50px 200px 50px;
@@ -303,11 +373,11 @@ a:link, a:visited, a:hover, a:active {
 .menu2Village img {
   border: 4px solid #F2F2F2; }
 
-#Ancre1, #Ancre2, #Ancre3, #toSezanne {
+#Ancre1, #toSezanne {
   margin-top: 20px;
   transform: scale(1);
   transition-duration: 300ms; }
-  #Ancre1:hover, #Ancre2:hover, #Ancre3:hover, #toSezanne:hover {
+  #Ancre1:hover, #toSezanne:hover {
     transform: scale(1.02); }
 
 #carrouselVillage {
@@ -315,6 +385,9 @@ a:link, a:visited, a:hover, a:active {
   width: 500px;
   border: 3px solid #F2F2F2;
   overflow: hidden; }
+  @media only screen and (max-width: 500px) {
+    #carrouselVillage {
+      display: none; } }
 
 .imgCarrouselVillage {
   width: 500px;
@@ -330,18 +403,27 @@ a:link, a:visited, a:hover, a:active {
 #carrouselVillage li {
   float: left; }
 
+#photoNavMobile img {
+  height: 200px;
+  width: 300px;
+  border: 3px solid #F2F2F2;
+  display: none; }
+  @media only screen and (max-width: 500px) {
+    #photoNavMobile img {
+      display: block; } }
+
 .menu2Village img {
   width: 500px;
   height: 350px; }
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 500px) {
     .menu2Village img {
       width: 300px;
       height: 200px; } }
 
 #Maps iframe {
-  width: 600px;
-  height: 450px; }
-  @media only screen and (max-width: 768px) {
+  width: 500px;
+  height: 350px; }
+  @media only screen and (max-width: 500px) {
     #Maps iframe {
       width: 300px;
       height: 200px; } }
@@ -349,6 +431,7 @@ a:link, a:visited, a:hover, a:active {
 /* --------------------------------- MAIRIE ------------------------------ */
 #MAIRIE {
   z-index: 0;
+  margin-top: -40px;
   display: block;
   width: 100%;
   overflow: hidden;
@@ -356,17 +439,24 @@ a:link, a:visited, a:hover, a:active {
   position: absolute;
   top: -100px;
   background-color: white; }
+  @media only screen and (max-width: 768px) {
+    #MAIRIE {
+      margin-top: -50px; } }
 
 /* ----------------------------------- Demarches ---------------------------- */
 #DEMARCHES {
-  z-index: 1;
+  z-index: 0;
   opacity: 1;
-  position: relative;
-  top: -300px;
+  position: absolute;
+  width: 100%;
+  top: -280px;
   background-color: white;
   margin-top: 0px;
   margin-bottom: -150px;
   padding: 10px; }
+  @media only screen and (max-width: 768px) {
+    #DEMARCHES {
+      margin-top: 30px; } }
 
 #etatcivil, #servicePublic {
   display: flex; }
@@ -416,21 +506,28 @@ a:link, a:visited, a:hover, a:active {
 
 /* ------------------------------------ Contact ----------------------------*/
 #CONTACT {
-  margin-top: 150px; }
+  margin-top: 125px; }
+  @media only screen and (max-width: 550px) {
+    #CONTACT {
+      margin-top: 100px; } }
 
 #formulaireContact {
   background-color: rgba(195, 191, 191, 0.5);
   width: 500px;
   margin: auto;
   font-family: "Acme-Regular";
-  font-size: 30px; }
-  @media only screen and (max-width: 600px) {
+  font-size: 30px;
+  padding: 15px; }
+  @media only screen and (max-width: 550px) {
     #formulaireContact {
-      width: auto; } }
+      width: 280px; } }
 
 #CONTACT input, #CONTACT textarea {
   font-family: "Acme-Regular";
   font-size: 25px; }
+  @media only screen and (max-width: 550px) {
+    #CONTACT input, #CONTACT textarea {
+      width: 270px; } }
 
 #CoordonneesContact {
   display: flex;
@@ -444,26 +541,28 @@ a:link, a:visited, a:hover, a:active {
   width: 180px;
   height: 30px;
   border: 0px;
-  margin: 20px 0 20px 0; }
+  margin: 0 0 10px 0; }
 
 #messageContact textarea {
   width: 495px;
   height: 150px;
-  border: 0px;
-  margin-top: 20px; }
+  border: 0px; }
   @media only screen and (max-width: 550px) {
     #messageContact textarea {
-      width: auto;
-      margin: auto; } }
+      width: 270px;
+      margin-top: 10px; } }
 
 #ErrorMailContact.closed, #SuccessMailContact.closed {
   display: none; }
 
 /* --------------------------------- footer ------------------------- */
+#footer {
+  position: relative;
+  bottom: 0;
+  padding: 5px 0 10px 0;
+  background-color: white; }
+
 #footer h3, #footer p {
   text-align: center; }
-  @media screen and (max-width: 1000px) {
-    #footer h3, #footer p {
-      display: none; } }
 
 /*# sourceMappingURL=style.css.map */
